# agritech-answers

./: .coverage  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  pytest.ini  rapport_metier.md  requirements.txt
.github/workflows/: ci-cd.yml
model/: cultures_pays_autorises.json  model_metadata.json
notebooks/: exploration_fusion.ipynb  modelisations.ipynb
src/api/: config.py  exceptions.py  main.py
src/api/routers/: health.py  predict.py  recommend.py
src/api/schemas/: predict.py  recommend.py
src/api/services/: prediction.py
src/streamlit/: app.py
tests/: conftest.py
tests/integration/: test_endpoint_health.py  test_endpoint_predict.py  test_endpoint_recommend.py
tests/unit/: test_exceptions.py  test_schemas.py  test_service.py
