[project]
name = "projet12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.13.0",
    "numpy>=2.4.2",
    "pandas<3",
    "plotly>=6.5.2",
    "protobuf<5.0.0",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "shap>=0.49.1",
    "streamlit>=1.55.0",
    "xgboost>=3.2.0",
]
